Changes for 1.9.1

 - [ZBX-3190] fixed sql errors when processing proxy configuration (asaveljevs,Sasha)
 - [DEV-471] fixed sql scripts names consistency (Sasha)
 - [ZBXNEXT-538] include ibm_db2 upgrade patches in distribution package (Sasha)
 - [ZBXNEXT-512] redesign of unknown events (Aly,asaveljevs,Sasha)
 - [ZBX-3130] fixed bug when creating custom graph: host items now can be added (KB)

Changes for 1.9.0

 - [DEV-477] added support of low-level discovery of file systems, network interfaces and SNMP OID's (Sasha,Vedmak)
 - [DEV-490] made graph legend optional (Aly)
 - [DEV-483] added templated screens (Aly)
 - [DEV-485] added multiple urls for map elements (Vedmak)
 - [DEV-471] field graph_theme.noneworktimecolor renamed to nonworktimecolor (Sasha)
 - [DEV-471] database integrity - added foreign keys (Sasha,Vedmak)
 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc3

 - [ZBX-1600] added support of value mapping for {ITEM.VALUE} macro in notifications (Sasha)
 - [ZBX-3065] fixed undefined variables in maps.php when logged as guest and no maps defined (Vedmak)
 - [ZBX-3206] fixed timeout for simple checks (removed hardcoded timeout 3 sec) (Sasha)
 - [ZBX-2787] it is no longer possible add invalid time for IT services, like 1:111 or 23:67 or 4:66 and so on (KB)
 - [ZBXNEXT-557] added TL compatibility information when executed AIX agent with --version flag (Sasha)
 - [ZBX-3195] fixed slow sync of trends data while server shutdown (Sasha)
 - [ZBXNEXT-549] added trigger function strlen() (asaveljevs,Vedmak)
 - [ZBX-3156] fixed integer trends for child node on master; thanks to Łukasz Reszka (asaveljevs)