@@ -17,16 +17,6 @@
 ** Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 **/
 
-#include <stdlib.h>
-#include <stdio.h>
-
-/* for setproctitle() */
-#include <sys/types.h>
-#include <unistd.h>
-
-#include <string.h>
-#include <strings.h>
-
 #include "zbxdb.h"
 #include "db.h"
 #include "log.h"
@@ -1881,20 +1871,21 @@ zbx_uint64_t	DBmultiply_value_uint64(DB_ITEM *item, zbx_uint64_t value)
  *                                                                            *
  * Return value:                                                              *
  *                                                                            *
- * Author: Aleksander Vladishev                                               *
+ * Author: Alexander Vladishev                                                *
  *                                                                            *
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
-void	DBregister_host(zbx_uint64_t proxy_hostid, const char *host, int now)
+void	DBregister_host(zbx_uint64_t proxy_hostid, const char *host, const char *ip, unsigned short port, int now)
 {
-	char		*host_esc;
+	char		*host_esc, *ip_esc;
 	DB_RESULT	result;
 	DB_ROW		row;
 	DB_EVENT	event;
 	zbx_uint64_t	autoreg_hostid;
 
 	host_esc = DBdyn_escape_string_len(host, HOST_HOST_LEN);
+	ip_esc = DBdyn_escape_string_len(ip, HOST_IP_LEN);
 
 	result = DBselect(
 			"select autoreg_hostid"
@@ -1907,17 +1898,27 @@ void	DBregister_host(zbx_uint64_t proxy_hostid, const char *host, int now)
 			DBnode_local("autoreg_hostid"));
 
 	if (NULL != (row = DBfetch(result)))
+	{
 		ZBX_STR2UINT64(autoreg_hostid, row[0]);
+
+		DBexecute("update autoreg_host"
+				" set listen_ip='%s',listen_port=%d"
+				" where autoreg_hostid=" ZBX_FS_UI64,
+				ip_esc, (int)port, autoreg_hostid);
+	}
 	else
 	{
 		autoreg_hostid = DBget_maxid("autoreg_host");
-		DBexecute("insert into autoreg_host (autoreg_hostid,proxy_hostid,host) values (" ZBX_FS_UI64 ",%s,'%s')",
-				autoreg_hostid,
-				DBsql_id_ins(proxy_hostid),
-				host_esc);
+		DBexecute("insert into autoreg_host"
+				" (autoreg_hostid,proxy_hostid,host,listen_ip,listen_port)"
+				" values"
+				" (" ZBX_FS_UI64 ",%s,'%s','%s',%d)",
+				autoreg_hostid, DBsql_id_ins(proxy_hostid),
+				host_esc, ip_esc, (int)port);
 	}
 	DBfree_result(result);
 
+	zbx_free(ip_esc);
 	zbx_free(host_esc);
 
 	/* Preparing auto registration event for processing */
@@ -1929,34 +1930,38 @@ void	DBregister_host(zbx_uint64_t proxy_hostid, const char *host, int now)
 	event.value	= TRIGGER_VALUE_TRUE;
 
 	/* Processing event */
-	process_event(&event, 0);
+	process_event(&event, 1);
 }
 
 /******************************************************************************
  *                                                                            *
  * Function: DBproxy_register_host                                            *
  *                                                                            *
- * Purpose: registrate unknown host                                           *
+ * Purpose: register unknown host                                             *
  *                                                                            *
  * Parameters: host - host name                                               *
  *                                                                            *
  * Return value:                                                              *
  *                                                                            *
- * Author: Aleksander Vladishev                                               *
+ * Author: Alexander Vladishev                                                *
  *                                                                            *
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
-void	DBproxy_register_host(const char *host)
+void	DBproxy_register_host(const char *host, const char *ip, unsigned short port)
 {
-	char	*host_esc;
+	char	*host_esc, *ip_esc;
 
 	host_esc = DBdyn_escape_string_len(host, HOST_HOST_LEN);
+	ip_esc = DBdyn_escape_string_len(ip, HOST_IP_LEN);
 
-	DBexecute("insert into proxy_autoreg_host (clock,host) values (%d,'%s')",
-			(int)time(NULL),
-			host_esc);
+	DBexecute("insert into proxy_autoreg_host"
+			" (clock,host,listen_ip,listen_port)"
+			" values"
+			" (%d,'%s','%s',%d)",
+			(int)time(NULL), host_esc, ip_esc, (int)port);
 
+	zbx_free(ip_esc);
 	zbx_free(host_esc);
 }
 
